loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:2: error: not found: value estSurBaggle
while (!estSurBaggle) {
        ^