loopfor.LoopFor.scala.code
var x=0
while (!estSurBaggle) {
  avance()
  x=x+1
}
prendBiscuit()
for (c <- 1 to x) {
  recule()
}
poseBiscuit()